PS-47 Fix page overflow issue due to extra margin

--- a/public/css/orderprocessor/NewOrdersPage.css
+++ b/public/css/orderprocessor/NewOrdersPage.css
@@ -3,7 +3,7 @@
 /* All styles unique to newOrdersPage */
 
 body {
-  margin: 1.5rem;
+  margin: 1.5rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
